# gautamsachdeva-site-monitor

./: .gitignore  README.md  app.py  generate_index.py  generate_report.py  pyproject.toml
docs/: UPTIMEROBOT_SETUP.md
reports/: 2026-04-05.html  2026-04-06.html  2026-04-07.html  2026-04-08.html  2026-04-09.html  2026-04-10.html  2026-04-11.html  2026-04-12.html  2026-04-13.html  2026-04-14.html  2026-04-15.html  2026-04-16.html  2026-04-17.html  2026-04-18.html  2026-04-19.html  2026-04-20.html  2026-04-21.html  2026-04-22.html  2026-04-23.html  2026-04-24.html  2026-04-25.html  2026-04-26.html  2026-04-27.html  2026-04-28.html  2026-04-29.html  2026-04-30.html  2026-05-01.html  2026-05-02.html  2026-05-03.html  2026-05-04.html  2026-05-05.html  2026-05-06.html  2026-05-07.html  2026-05-08.html  2026-05-09.html  2026-05-10.html  2026-05-11.html  2026-05-12.html  2026-05-13.html  2026-05-14.html  (+71 more)
results/: 2026-04-05.json  2026-04-06.json  2026-04-07.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  (+73 more)
(+14 files in other folders)
