[project]
name = "gautamsachdeva-site-monitor"
version = "1.0.0"
description = "Automated site health monitoring for gautamsachdeva.com"
requires-python = ">=3.11"

dependencies = [
    "playwright>=1.50,<2",
    "pytest>=8,<9",
    "pytest-playwright>=0.6,<1",
    "pytest-json-report>=1.5,<2",
]

[project.optional-dependencies]
dev = [
    "ruff",
]
